[gd_scene load_steps=8 format=3 uid="uid://bsfi2tkt8uodm"]

[ext_resource type="Texture2D" uid="uid://b33crijr5jcbc" path="res://Game/background/sky.png" id="1_bpugw"]
[ext_resource type="Script" uid="uid://dey28lttx00gc" path="res://Game/background/background_script.gd" id="1_gjjrj"]
[ext_resource type="Texture2D" uid="uid://bi3vmpdjjca0q" path="res://Game/background/islands.png" id="2_gjjrj"]
[ext_resource type="Texture2D" uid="uid://cc7id1aqsi8sm" path="res://Game/background/clouds1.png" id="3_vvxqx"]
[ext_resource type="Texture2D" uid="uid://iikp3ug03gn1" path="res://Game/background/clouds2.png" id="4_cdpnt"]
[ext_resource type="Texture2D" uid="uid://bclf22kof6pol" path="res://Game/background/waves2.png" id="5_8u6ia"]
[ext_resource type="Texture2D" uid="uid://ck5qsnvjxo8i" path="res://Game/background/waves1.png" id="6_6i7po"]

[node name="Background" type="Node"]
script = ExtResource("1_gjjrj")

[node name="Layer1" type="Sprite2D" parent="."]
position = Vector2(380, 270)
scale = Vector2(0.375, 0.375)
texture = ExtResource("1_bpugw")

[node name="Layer1_2" type="Sprite2D" parent="Layer1"]
position = Vector2(1280, 0)
texture = ExtResource("1_bpugw")

[node name="Layer1_3" type="Sprite2D" parent="Layer1"]
position = Vector2(-1280, 0)
texture = ExtResource("1_bpugw")

[node name="Layer2" type="Sprite2D" parent="."]
position = Vector2(380, 270)
scale = Vector2(0.375, 0.375)
texture = ExtResource("2_gjjrj")

[node name="Layer2_2" type="Sprite2D" parent="Layer2"]
position = Vector2(1280, 0)
texture = ExtResource("2_gjjrj")

[node name="Layer2_3" type="Sprite2D" parent="Layer2"]
position = Vector2(-1280, 0)
texture = ExtResource("2_gjjrj")

[node name="Layer3" type="Sprite2D" parent="."]
position = Vector2(380, 270)
scale = Vector2(0.375, 0.375)
texture = ExtResource("3_vvxqx")

[node name="Layer3_2" type="Sprite2D" parent="Layer3"]
position = Vector2(1280, 0)
texture = ExtResource("3_vvxqx")

[node name="Layer3_3" type="Sprite2D" parent="Layer3"]
position = Vector2(-1280, 0)
texture = ExtResource("3_vvxqx")

[node name="Layer4" type="Sprite2D" parent="."]
position = Vector2(380, 270)
scale = Vector2(0.375, 0.375)
texture = ExtResource("4_cdpnt")

[node name="Layer4_2" type="Sprite2D" parent="Layer4"]
position = Vector2(1280, 0)
texture = ExtResource("4_cdpnt")

[node name="Layer4_3" type="Sprite2D" parent="Layer4"]
position = Vector2(-1280, 0)
texture = ExtResource("4_cdpnt")

[node name="Layer5" type="Sprite2D" parent="."]
position = Vector2(380, 270)
scale = Vector2(0.375, 0.375)
texture = ExtResource("5_8u6ia")

[node name="Layer5_2" type="Sprite2D" parent="Layer5"]
position = Vector2(1280, 0)
texture = ExtResource("5_8u6ia")

[node name="Layer5_3" type="Sprite2D" parent="Layer5"]
position = Vector2(-1280, 0)
texture = ExtResource("5_8u6ia")

[node name="Layer6" type="Sprite2D" parent="."]
position = Vector2(380, 270)
scale = Vector2(0.375, 0.375)
texture = ExtResource("6_6i7po")

[node name="Layer6_2" type="Sprite2D" parent="Layer6"]
position = Vector2(1280, 0)
texture = ExtResource("6_6i7po")

[node name="Layer6_3" type="Sprite2D" parent="Layer6"]
position = Vector2(-1280, 0)
texture = ExtResource("6_6i7po")
